# PCSuite

./: .gitignore  README.md
.github/workflows/: ci.yml  publish.yml
pcsuite/: README.md  pyproject.toml
pcsuite/docs/: how_rollback_works.md  spec.md
pcsuite/scripts/: cleanup.ps1  dev_setup.ps1  elevate_test.ps1  make_restore_point.ps1  preview.ps1  rollback.ps1
pcsuite/src/pcsuite/: __init__.py
pcsuite/src/pcsuite/agent/: runner.py  service.py
pcsuite/src/pcsuite/cleaners/: windows_update_leftovers.py
pcsuite/src/pcsuite/cli/: clean.py  edr.py  main.py  optimize.py  sched.py  schedule.py  security.py
pcsuite/src/pcsuite/core/: elevation.py  fs.py  registry.py  shell.py
pcsuite/src/pcsuite/data/: exclusions.yml  optimize_profiles.yml  signatures.yml
pcsuite/src/pcsuite/optimize/: network_stack.py  power.py
pcsuite/src/pcsuite/security/: defender.py  edr.py  firewall.py  logs.py  reputation.py  rules.py
pcsuite/src/pcsuite/ui/gui/: app.py
pcsuite/tests/: test_edr.py  test_gui.py
src/: main.py
