[project]
name = "pcsuite"
version = "0.1.0"
description = "Open-source Windows cleanup, startup, optimization, and security toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PCSuite Contributors" }]
keywords = ["windows", "cleanup", "optimization", "security", "startup"]
license = { text = "Apache-2.0" }

dependencies = [
	"typer>=0.12.0",
	"rich>=13.7.1",
	"psutil>=5.9.8",
	"pywin32>=306",
	"pyyaml>=6.0.1"
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
